<?xml version="1.0"?>
<package format="2">
  <name>rmip</name>
  <version>0.0.0</version>
  <description>The rmip package</description>

  <maintainer email="sxd@sxd.cn">sun</maintainer>

  <license>BSD</license>

  <author email="sxd@sxd.cn">sun</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>roslib</depend>

  <export>
  </export>
</package>
